--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.zoneinfo==0.2.1
 coverage==6.3.2
 Django==4.0.2
 django-cors-headers==3.11.0
+django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 PyJWT==2.3.0
