--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "miragejs": "^0.1.43",
     "polished": "^4.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
-  
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
