--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,20 @@
 {
-  "name": "client",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "miragejs": "^0.1.43",
-    "polished": "^4.1.4",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
-    "reactstrap": "^9.0.1",
-    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
-    "@types/react-modal": "^3.13.1",
-    "@types/styled-components": "^5.1.24",
-    "typescript": "^4.6.2"
+    "@testing-library/user-event": "^13.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
